--- a/Source Code/Appointment App/app/build.gradle
+++ b/Source Code/Appointment App/app/build.gradle
@@ -74,8 +74,8 @@ dependencies {
     // Wave Swipe Refresh Layout
     implementation 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'
 
-    // Material Dialog
-    implementation 'com.github.michael-rapp:android-material-dialog:5.2.3'
+    // Lovely Dialog
+    implementation 'com.yarolegovich:lovely-dialog:1.1.1'
 
     // AndroidX Test Implementation
     testImplementation 'junit:junit:4.13.1'
