Fix time and date duplication when creating a new appointment

--- a/Source Code/Appointment App/app/src/main/AndroidManifest.xml
+++ b/Source Code/Appointment App/app/src/main/AndroidManifest.xml
@@ -7,7 +7,10 @@
     <dist:module dist:instant="true" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SET_ALARM"/>
 
     <application
         android:allowBackup="true"
@@ -36,6 +39,8 @@
                 <action android:name="android.intent.action.SCREEN_OFF" />
             </intent-filter>
         </receiver>
+
+        <receiver android:name=".service.AlarmReceiver" android:process=":alarm_receiver"/>
 
         <activity
             android:name=".SplashActivity"
