--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,6 +18,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
-      run: chmod +x "Source Code/Appointment App/gradlew"
+      run: chmod +x ./Source Code/Appointment App/gradlew
     - name: Build with Gradle
-      run: Source Code/Appointment App/gradlew build
+      run: ./Source Code/Appointment App/gradlew build
