--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -18,6 +17,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
-      run: chmod +x ./Source Code/Appointment App/gradlew
+      run: chmod +x ./gradlew
     - name: Build with Gradle
-      run: ./Source Code/Appointment App/gradlew build
+      run: gradlew build
