--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,6 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+.vscode/launch.json
+Source Code/Server Files/v1/composer.lock
+Source Code/Server Files/v1/vendor
